# relocation-fun

./: .clang-format  CMakeLists.txt  README.md
src/: builder.cpp  shellcode.cpp
